Organized Javascript into seperate file JS that was in index.html in script tags is now in main.js.

--- a/cratedig.html
+++ b/cratedig.html
@@ -30,9 +30,9 @@
 	<header>
 
 		<nav class="navMenu navRight">
-	      <a href="/" class="menu-space">The Club</a>
+	      <a href="index.html" class="menu-space">The Club</a> <!-- Change href to "/" in deployment -->
 	      <a href="https://discord.gg/5AtUQZnCdq" target="_blank" class="menu-space">Discord</a>
-	      <a href="cratedig" class="menu-space">CrateDig</a>
+	      <a href="cratedig.html" class="menu-space">CrateDig</a> <!-- Change href to "createdig" in deployment -->
 	      <div class="dot dotCenter"></div>
 	    </nav>
 
@@ -57,9 +57,9 @@
 	<footer>
 
 		<nav class="navMenu navFoot">
-	      <a href="/" class="menu-space">The Club</a>
+	      <a href="index.html" class="menu-space">The Club</a> <!-- Change href to "/" in deployment -->
 	      <a href="https://discord.gg/5AtUQZnCdq" target="_blank" class="menu-space">Discord</a>
-	      <a href="cratedig" class="menu-space">CrateDig</a>
+	      <a href="cratedig.html" class="menu-space">CrateDig</a> <!-- Change href to "createdig" in deployment -->
 	      <div class="dot dotCenter"></div>
 	    </nav>
 
