--- a/cratedig.html
+++ b/cratedig.html
@@ -4,64 +4,44 @@
 
 	<head>
 
-		<meta charset="UTF-8">
-		<title>CrateDig AI Beta • Underground Hip-Hop Mixtapes</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="CrateDig AI hosted by the Underground Gem Club. CrateDig is an AI chatbot which lets users enter descriptions for a specific kind of music and outputs samples according to the user's specifications.">
-		<script data-ad-client="ca-pub-8544117887014635" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8544117887014635"
-     crossorigin="anonymous"></script>
- 
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css.css" media="screen"/>
-
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="msapplication-TileColor" content="#2b5797">
-		<meta name="theme-color" content="#ffffff">
+	<meta charset="UTF-8">
+    <title>Underground Gem Club • Underground Hip-Hop Mixtapes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="The Underground Gem Club features a large selection of hard-to-find hip-hop mixtapes, all in one place.">
+    <script src="test.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="test.css" media="screen"/>
 
 	</head>
 
 	<header>
 
-		<nav class="navMenu navRight">
-	      <a href="index.html" class="menu-space">The Club</a> <!-- Change href to "/" in deployment -->
-	      <a href="https://discord.gg/5AtUQZnCdq" target="_blank" class="menu-space">Discord</a>
-	      <a href="cratedig.html" class="menu-space">CrateDig</a> <!-- Change href to "createdig" in deployment -->
-	      <div class="dot dotCenter"></div>
-	    </nav>
-
-		<div class="logPos">
-			<img src="https://i.imgur.com/RHe7zjV.gif" class="logo" alt="Logo for the Underground Gem Club - the destination for underground hip-hop mixtapes">
-			<h1 class="logo2 centerLogo hide-menu">CrateDig AI Beta</h1>
-			<h3 class="logo3 centerLogo hide-menu">Sample Searching for the 21st Century</h1>
-		</div>
+		<div class="navFixed">
+			<nav class="navMenu navHead">
+				<a href="index.html" class="menu-space">The Club</a> <!-- Change href to "/" in deployment -->
+				<a href="https://discord.gg/5AtUQZnCdq" target="_blank" class="menu-space">Discord</a>
+				<a href="cratedig.html" class="menu-space">CrateDig</a> <!-- Change href to "createdig" in deployment -->
+			  </nav>
+			</div>
+		
+			<div class="logPos">
+				<img src="/assets/gemlogo.gif" class="logo" alt="Logo for the Underground Gem Club - the destination for underground hip-hop mixtapes">
+				<h1 class="logo2 centerLogo hide-menu">UNDERGROUND GEM CLUB</h1>
+				<h3 class="logo3 centerLogo hide-menu"><i>Mixtapes Live Here</i></h1>
+			</div>
 
 	</header>
 
 
 	<body>
 
-	<img src="https://i.imgur.com/oz3i71y.png" class="tempCenter">
 
 	</body>
 
 
 	<footer>
 
-		<nav class="navMenu navFoot">
-	      <a href="index.html" class="menu-space">The Club</a> <!-- Change href to "/" in deployment -->
-	      <a href="https://discord.gg/5AtUQZnCdq" target="_blank" class="menu-space">Discord</a>
-	      <a href="cratedig.html" class="menu-space">CrateDig</a> <!-- Change href to "createdig" in deployment -->
-	      <div class="dot dotCenter"></div>
-	    </nav>
-
-
-		<h1><p class="copyright">The Underground Gem Club is the destination for hard-to-find underground hip-hop mixtapes, all in one place.<br>©2023 Dylan Madhani. All Rights Reserved. • <a style="text-decoration: none; color: inherit" href="disclaimer" target="_blank">Disclaimer</a><br><br></p></h1>
-
+		<h1><p class="copyright">The Underground Gem Club is the destination for hard-to-find underground hip-hop mixtapes, all in one place.<br>©2023 Dylan Madhani. All Rights Reserved. • <a style="text-decoration: none; color: inherit" href="disclaimer.html" target="_blank">Disclaimer</a><br><br></p></h1>
 	</footer>
 
 </html>
