Larger menu, rounded searchbar Made styling changes for easier use.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Underground Gem Club • Underground Hip-Hop Mixtapes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
     <meta name="description" content="The Underground Gem Club features a large selection of hard-to-find hip-hop mixtapes, all in one place.">
     <script src="test.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
@@ -27,6 +27,8 @@
 
 <header>
 
+   
+
     <nav class="navMenu navHead">
         <a href="index.html" class="menu-space">The Club</a> <!-- Change href to "/" in deployment -->
         <a href="https://discord.gg/5AtUQZnCdq" target="_blank" class="menu-space">Discord</a>
@@ -37,6 +39,8 @@
         <h1 class="logo2 centerLogo hide-menu">UNDERGROUND GEM CLUB</h1>
         <h3 class="logo3 centerLogo hide-menu"><i>Mixtapes Live Here</i></h1>
     </div>
+
+ 
 
 </header>
 
@@ -56,11 +60,7 @@
         <label for="artist" class="searchAttribute">Artist</label>
         <input type="radio" id="radio-color" name="search_attributes" value="Date" onClick="updateSearch('Date')">
         <label for="date" class="searchAttribute">Date</label>
-
       </form>
-
-
-
 
     <div id="data-container"></div>
     
