Asset path fixes Path fixes to allow Github Pages hosting

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
 
         <div class="logPos">
-            <img src="/assets/gemlogo.gif" class="logo" alt="Logo for the Underground Gem Club - the destination for underground hip-hop mixtapes">
+            <img src="assets/gemlogo.gif" class="logo" alt="Logo for the Underground Gem Club - the destination for underground hip-hop mixtapes">
             <h1 class="logo2 centerLogo hide-menu">UNDERGROUND GEM CLUB</h1>
             <h3 class="logo3 centerLogo hide-menu"><i>Mixtapes Live Here</i></h1>
         </div>
